--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,11 +1,11 @@
 .menu-item{
   min-width: 30%;
-  height: 250px;
+  height: 320px;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  // border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
 
@@ -13,8 +13,8 @@
     cursor: pointer;
 
     & .background-image{
-      transform: scale(1.1);
-      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      transform: scale(1.5);
+      transition: transform 2s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
 
     & .content{
@@ -24,7 +24,7 @@
   
 
   &.large{
-    height: 380px;
+    height: 550px;
   }
 
   &:first-child{
