--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -4,8 +4,10 @@
   margin-bottom: 30px;
 
   .title{
-    font-size: 28px;
+    font-size: 36px;
     margin-bottom: 25px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
   }
 
   .preview{
