--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,9 @@ body{
 a{
   text-decoration: none;
   color: black;
-  font-weight: bold;
+  /* font-weight: bold; */
+}
+
+* {
+  box-sizing: border-box;
 }
