Moved our directory and shop data into its own reducer, created respective selectors and updated corresponding components with new redux flow for directory/shop

--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -12,6 +12,8 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid darkgrey;
+    font-weight: bold;
+    padding: 10px;
 
     .header-block{
       text-transform: capitalize;
